7 Feb 2019

# Parameters
- a post-validation transform was erroneously applied to `freqLimNotch`; this has been fixed

# planLoad
- on non-Windows systems without GPUs (i.e., where no memory information is available),
  JRCLUST attempts to load the entire file, potentially crashing when the file is large;
  this has been fixed

# doBootstrap
- double check for binary file if binary and meta filenames don't match

# Config
- glob expansion in bin files was resulting in nested cell arrays instead of files; this has been fixed

# jrc
- try-catch around hJRC creation resulting in useless error messages; this has been corrected

6 Feb 2019

Added an importer for JRCv3 _jrc.mat files.
This can be used via `jrc importv3 /path/to/your/session_jrc.mat`

# JRC
- deprecate/warning was giving erroneous messages; this has been fixed

# Config
- make errors and warnings (if in dialogs) blocking
- make fullParams a dependent property rather than recomputing it in different places
- don't validate params if not given a filename in constructor
- removed setters for `*Samp` (dependent) properties
- check for Dependent status and membership in fullParams in setCustomProp
- added pointer to param docs when exporting prm file

# depWarn
- make deprecation warnings blocking

# jrc.json
- added link to documentation
- updated release to alpha-patch2

5 Feb 2019

# Parameters
- `realignTraces` did not have a section field, causing crashes on `Config.save`; this has been fixed
- change sections for various filtering params to "preprocessing" rather than "spike detection"
# TracesController
- spike highlights were not clearing after toggling spikes off; this has been fixed
- annoying "Beginning/End of file" message triggered before reaching BOF/EOF; this has been fixed
# PreviewController
- spike highlights were not clearing after toggling spikes off; this has been fixed
- annoying "Beginning/End of file" message triggered before reaching BOF/EOF; this has been fixed
# Config